--- a/site/docs/quick-start.mdx
+++ b/site/docs/quick-start.mdx
@@ -40,13 +40,25 @@ npm install react-true-resizable
 [//]: # (@formatter:on)
 
 
+## Main Features
+
+- Resize any DOM node.
+- Does not wrap the target DOM node with other DOM elements.
+- Does not rely on the target DOM node CSS positioning style(and does not change it).
+- Written in modern React techniques and works great with other modern React UI frameworks like MUI.
+- Handles correctly and predictably refs forwarding behaviors.
+- Simple and efficient.
+- Simple API, yet can be easily customized.
+
+in simple words - it will work as you would expect.
+
+
+## Basic Usage
+
 import CodeBlock from '@site/src/components/CodeBlock';
 import BasicSource from '!!raw-loader!@site/src/demos/Basic';
 import Basic from '@site/src/demos/Basic';
-
 import BasicSimpleSource from '!!raw-loader!@site/src/demos/Basic/Simple';
-
-## Basic Usage
 
 <Basic />
 <CodeBlock
