--- a/site/docs/API.mdx
+++ b/site/docs/API.mdx
@@ -1,7 +1,23 @@
 ---
 sidebar_position: 3
 ---
+# API
 
-# Demos
 
-bla blas
+
+[//]  # (import ResizableAPI from "../typeDocs/interfaces/ResizableProps.html")
+
+[//]  # (export var ResizableAPI = require &#40;"../typeDocs/interfaces/ResizableProps.html"&#41;)
+
+
+
+## ResizableProps
+
+import PropsTable from 'react-docgen-props-table'
+import Resizable from 'react-true-resizable'
+import MyPropsTable from "@site/src/components/PropsTable"
+
+<MyPropsTable name={'Resizable'}/>
+
+[//]  # (import reactDocs from 'react-docgen')
+
