--- a/site/docs/implementation-notes.mdx
+++ b/site/docs/implementation-notes.mdx
@@ -1,10 +1,8 @@
 ---
-sidebar_position: 2
+sidebar_position: 5
 ---
 
-# Usage
-
-## Implementation Notes
+# Implementation Notes
 
 `react-true-resizable` is a React components that is written with modern React techniques and uses modern web API.
 
