--- a/site/docs/API.mdx
+++ b/site/docs/API.mdx
@@ -1,23 +1,19 @@
 ---
-sidebar_position: 3
+sidebar_position: 2
+hide_table_of_contents: true
 ---
 # API
 
-
-
-[//]  # (import ResizableAPI from "../typeDocs/interfaces/ResizableProps.html")
-
-[//]  # (export var ResizableAPI = require &#40;"../typeDocs/interfaces/ResizableProps.html"&#41;)
-
-
-
 ## ResizableProps
 
-import PropsTable from 'react-docgen-props-table'
-import Resizable from 'react-true-resizable'
-import MyPropsTable from "@site/src/components/PropsTable"
+This window embeds all available properties of Resizable. it actually documents this entire library definitions.
 
-<MyPropsTable name={'Resizable'}/>
+:::tip
 
-[//]  # (import reactDocs from 'react-docgen')
+Play around, and use the search. it's really easy.
 
+You can also explore the types using your favorite IDE, this library types are exposed and very useful.
+
+:::
+
+<iframe width={"100%"} height={"1000px"} src={'/typedocs/interfaces/react_true_resizable_src_Resizable.ResizableProps.html'} />
