--- a/site/docs/quick-start.mdx
+++ b/site/docs/quick-start.mdx
@@ -52,20 +52,15 @@ npm install react-true-resizable
 
 in simple words - it will work as you would expect.
 
+:::info Why
+See [comparison](/docs/comparison) with other Resizable solutions to learn why this lib is different.
+:::
 
 ## Basic Usage
 
-import CodeBlock from '@site/src/components/CodeBlock';
-import BasicSource from '!!raw-loader!@site/src/demos/Basic';
-import Basic from '@site/src/demos/Basic';
-import BasicSimpleSource from '!!raw-loader!@site/src/demos/Basic/Simple';
+import DemoPreviewer from '@site/src/components/DemoPreviewer';
 
-<Basic />
-<CodeBlock
-  simpleSource={BasicSimpleSource}
-  fullSource={BasicSource}
-/>
-
+<DemoPreviewer name={"Basic"} />
 
 ## Live Edit
 ```jsx live
