--- a/site/docs/quick-start.mdx
+++ b/site/docs/quick-start.mdx
@@ -60,7 +60,9 @@ See [comparison](/docs/comparison) with other Resizable solutions to learn why t
 
 import DemoPreviewer from '@site/src/components/DemoPreviewer';
 
-<DemoPreviewer name={"Basic"} />
+import Basic from '@site/src/demos/Basic';
+
+<DemoPreviewer name={"Basic"} Comp={Basic}/>
 
 ## Live Edit
 ```jsx live
