--- a/site/docs/API.mdx
+++ b/site/docs/API.mdx
@@ -22,11 +22,10 @@ export const ApiFrame = () => {
   const { siteConfig } = useDocusaurusContext()
   return (
     <iframe
-      width={"100%"}
-      height={"1000px"}
+      style={{ height: "100vh",width: "100%" }}
       src={`${siteConfig.baseUrl}typeDocs/interfaces/react_true_resizable_src_Resizable.ResizableProps.html`} />
   )
 }
 
-<ApiFrame/>
+<ApiFrame />
 
