--- a/site/docs/quick-start.mdx
+++ b/site/docs/quick-start.mdx
@@ -47,7 +47,7 @@ npm install react-true-resizable
 - Does not rely on the target DOM node CSS positioning style(and does not change it).
 - Written in modern React techniques and works great with other modern React UI frameworks like MUI.
 - Handles correctly and predictably refs forwarding behaviors.
-- Fast and efficient.
+- Very Fast and efficient(most 'expensive' calculation are memorized).
 - Simple API, yet can be easily customized.
 
 in simple words - it will work as you would expect.
