--- a/site/docs/API.mdx
+++ b/site/docs/API.mdx
@@ -8,7 +8,7 @@ hide_table_of_contents: true
 
 This window embeds all available properties of Resizable. it actually documents this entire library definitions.
 
-:::tip
+:::tip API
 
 Play around, and use the search. it's really easy.
 
@@ -16,13 +16,33 @@ You can also explore the types using your favorite IDE, this library types are e
 
 :::
 
+:::note links
+
+You can open links in new tab(Ctrl+click) for full screen view.
+To view source code, open in new tab (GitHub can't be viewed in iframe).
+
+:::
+
 import useDocusaurusContext from "@docusaurus/useDocusaurusContext";
 
 export const ApiFrame = () => {
   const { siteConfig } = useDocusaurusContext()
+  const iframeRef = React.useRef(null);
+  /**
+   const iDoc = iframeRef.current?.contentWindow.document;
+   React.useEffect(() => {
+    if(iDoc){
+      const iHead = iDoc.head;
+      const base = iDoc.createElement("base");
+      base.setAttribute("target", "_blank");
+      iHead.appendChild(base)
+    }
+  },[iframeRef.current])
+   **/
   return (
     <iframe
-      style={{ height: "100vh",width: "100%" }}
+      ref={iframeRef}
+      style={{ height: "100vh", width: "100%" }}
       src={`${siteConfig.baseUrl}typeDocs/interfaces/react_true_resizable_src_Resizable.ResizableProps.html`} />
   )
 }
