--- a/site/docs/quick-start.mdx
+++ b/site/docs/quick-start.mdx
@@ -43,12 +43,14 @@ npm install react-true-resizable
 ## Main Features
 
 - Resize any DOM node.
-- Does not wrap the target DOM node with other DOM elements.
+- Written in modern React techniques.
+- Fully supported on desktop and mobile(multi-touch supported!).
+- Works great with other modern React components and UI frameworks(like MUI).
+- Very Fast and efficient(most 'expensive' calculation are memoized).
+- Does not wrap the target DOM node with other DOM elements (hence not changing his layout).
 - Does not rely on the target DOM node CSS positioning style(and does not change it).
-- Written in modern React techniques and works great with other modern React UI frameworks like MUI.
-- Handles correctly and predictably refs forwarding behaviors.
-- Very Fast and efficient(most 'expensive' calculation are memorized).
-- Simple API, yet can be easily customized.
+- Modular and extensible Design.
+- Simple, yet powerful API.
 
 in simple words - it will work as you would expect.
 
